--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,4 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+
+    <group
+        android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/nav_home"
+            android:title="Faturamento"/>
+        <item
+            android:id="@+id/nav_freight"
+            android:icon="@drawable/nav_freight"
+            android:title="Inserir Frete"/>
+        <item
+            android:id="@+id/nav_veihcle"
+            android:icon="@drawable/nav_veihcle"
+            android:title="Inserir Veiculo"/>
+        <item
+            android:id="@+id/nav_expense"
+            android:icon="@drawable/nav_expense"
+            android:title="Inserir Tipo de Gasto"/>
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/nav_about"
+            android:title="Sobre nós"/>
+
+    </group>
+
+    <item
+        android:title="">
+        <menu>
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/nav_logout"
+                android:title="Sair"/>
+        </menu>
+    </item>
+
 </menu>
