--- a/app/src/main/res/layout/fragment_veihcle.xml
+++ b/app/src/main/res/layout/fragment_veihcle.xml
@@ -28,9 +28,10 @@
         android:text="Veiculo(Placa)" />
 
         <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edRenamed"/>
+            android:id="@+id/edRenamed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <Button
         android:id="@+id/btCadastroVeiculo"
