--- a/app/src/main/res/layout/fragment_freight.xml
+++ b/app/src/main/res/layout/fragment_freight.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:backgroundTint="#0A22F4"
+            android:backgroundTint="@color/Page"
             android:textColor="@color/white"
             android:text="INSERIR" />
 
@@ -66,7 +66,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:backgroundTint="@color/Pneus"
+                android:backgroundTint="@color/Negacao"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
                 android:text="Desativar"/>
@@ -75,7 +75,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:backgroundTint="@color/LucroFinal"
+                android:backgroundTint="@color/Afirmacao"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
                 android:text="Voltar"/>
