--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical">
 
                     <!--View to display the yellow color icon-->
@@ -99,7 +99,7 @@
                 <!--Linear layout to display Python-->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="5dp">
 
@@ -121,7 +121,7 @@
                 <!--Linear layout to display C++-->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="5dp">
 
@@ -143,7 +143,7 @@
                 <!--Linear layout to display Java-->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="5dp">
 
@@ -172,7 +172,7 @@
     <!-- Use of programming languages -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/cardViewGraph"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -182,9 +182,13 @@
         app:cardCornerRadius="10dp"
         android:id="@+id/details">
 
-        <!--Relative layout to display -->
-        <!-- use of programming languages -->
-        <LinearLayout
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <!--Relative layout to display -->
+            <!-- use of programming languages -->
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -359,6 +363,8 @@
             </RelativeLayout>
 
         </LinearLayout>
+
+        </ScrollView>
 
     </androidx.cardview.widget.CardView>
 
