--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,8 +16,15 @@
     <color name="color_white">#ededf2</color>
     <color name="color_two">#E3E0E0</color>
 
-    <color name="Combustivel">#FFA726</color>
-    <color name="LucroFinal">#66BB6A</color>
-    <color name="Pneus">#EF5350</color>
-    <color name="ServicoEletrico">#29B6F6</color>
+    <color name="Combustivel">#AF4646</color>
+    <color name="LucroFinal">#18E622</color>
+    <color name="Pneus">#403A3A</color>
+    <color name="ServicoEletrico">#FFC107</color>
+
+    <color name="Afirmacao">#71BC75</color>
+    <color name="Negacao">#E86C6A</color>
+    <color name="Header">#29B6F6</color>
+    <color name="Page">#3C4CD8</color>
+
+
 </resources>
