Inserções de dados mais simples funcionando

--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -26,12 +26,14 @@
             android:layout_marginTop="40dp"
             android:textColor="@color/black"
             android:text="Serviço/Componente" />
+
         <EditText
+            android:id="@+id/edExpense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/btInserirSv"
+            android:id="@+id/btCadastroGasto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/Page"
