--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.controlenamao.CreditFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:text="INSERIR NOVO CRÉDITO" />
@@ -51,7 +51,8 @@
         <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"/>
+        android:autofillHints="Insira a Data do Crédito"
+        android:inputType="date"/>
 
         <TextView
         android:layout_width="match_parent"
@@ -63,6 +64,7 @@
         <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Insira o valor do Cédito"
         android:inputType="number"/>
 
         <Button
