--- a/app/src/main/res/layout/fragment_freight.xml
+++ b/app/src/main/res/layout/fragment_freight.xml
@@ -27,11 +27,12 @@
             android:text="Frete (Ex: Graneleiro, mudança, etc)" />
 
         <EditText
+            android:id="@+id/edFreight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/btInserirVl"
+            android:id="@+id/btCadastroFrete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
