--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -49,6 +49,7 @@
         android:text="Data" />
 
         <EditText
+        android:id="@+id/edDataCredito"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints="Insira a Data do Crédito"
@@ -62,13 +63,14 @@
         android:text="Valor" />
 
         <EditText
+        android:id="@+id/edValorCredito"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Insira o valor do Cédito"
         android:inputType="number"/>
 
         <Button
-        android:id="@+id/btInserirVl"
+        android:id="@+id/btCadastroCredito"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
