--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -14,10 +14,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:text="INSERIR TIPO DE GASTO"
+            android:text="@string/inserirGasto"
             android:layout_gravity="center"/>
 
         <TextView
@@ -25,10 +25,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:textColor="@color/black"
-            android:text="Serviço/Componente" />
+            android:text="@string/inserirServico" />
 
         <EditText
             android:id="@+id/edExpense"
+            android:autofillHints="name"
+            android:hint="@string/escreva"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -39,11 +42,11 @@
             android:backgroundTint="@color/Page"
             android:textColor="@color/white"
             android:layout_marginBottom="20dp"
-            android:text="INSERIR" />
+            android:text="@string/inserir" />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1">
 
             <LinearLayout
@@ -71,16 +74,17 @@
                 android:backgroundTint="@color/Negacao"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
-                android:text="Desativar"/>
+                android:text="@string/desativar"/>
 
             <Button
+                android:id="@+id/btHome"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/Afirmacao"
                 android:textColor="@color/white"
                 android:layout_margin="10dp"
-                android:text="Voltar"/>
+                android:text="@string/voltar"/>
 
         </LinearLayout>
 
