--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,9 +13,7 @@
 
         <RelativeLayout
 
-        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white">
@@ -114,7 +112,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="LucroFinal"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"/>
 
                 </LinearLayout>
 
@@ -136,7 +135,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pneus"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"/>
 
                 </LinearLayout>
 
@@ -158,7 +158,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Serviço Elétrico"
-                        android:paddingLeft="10dp"/>
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"/>
 
                 </LinearLayout>
 
