Refatoração para tabela de movimentação, melhorias em algumas validações e inclusão de chaves estrangeiras para as tabelas de veiculos, fretes e gastos

--- a/app/src/main/res/layout/fragment_credit.xml
+++ b/app/src/main/res/layout/fragment_credit.xml
@@ -17,7 +17,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="@string/credito" />
+        android:text="@string/movimentacao" />
 
         <TextView
         android:layout_width="match_parent"
